Closed
Bug 1136107
Opened 10 years ago
Closed 10 years ago
crash in `anonymous namespace''::wasapi_stream_start(cubeb_stream*)
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla39
People
(Reporter: xavier.delgado, Assigned: kinetik)
References
Details
Attachments
(1 file)
|
3.75 KB,
patch
|
padenot
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:39.0) Gecko/20100101 Firefox/39.0
Build ID: 20150223103044
Steps to reproduce:
1) Launch FF39 Nightly on 8.1
2) Launch a youtube video
3) Click "Pause"
4) Unplug speaker audio output jack (Terratec Aureon 7.1 USB)
5) Plug headphones output jack
Actual results:
Firefox crashes
Expected results:
I should have continue to listen video with headphones
More reports: https://crash-stats.mozilla.com/signature/?signature=%60anonymous+namespace%27%27%3A%3Awasapi_stream_start(cubeb_stream*)&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1
Updated•10 years ago
|
Severity: normal → critical
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•10 years ago
|
||
Simple fix, the assert in wasapi_stream_start is overly cautious.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
| Assignee | ||
Updated•10 years ago
|
status-firefox38:
--- → affected
status-firefox39:
--- → affected
| Assignee | ||
Comment 2•10 years ago
|
||
| Assignee | ||
Comment 3•10 years ago
|
||
Comment on attachment 8571151 [details] [diff] [review]
Handle reconfiguring audio device if it went away while the stream was stopped
Actually not just an assert. Problem is that the default audio device has gone away while the stream has stopped, and we don't expect to need to reconfigure it when restarting the stream.
Attachment #8571151 -
Flags: review?(padenot)
Updated•10 years ago
|
Attachment #8571151 -
Flags: review?(padenot) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
This patch should also take care of the wasapi_stream_stop crashes that show up in the crash stats for 39.0a1.
| Assignee | ||
Comment 5•10 years ago
|
||
That applies to 38.0a2 as well.
| Assignee | ||
Comment 6•10 years ago
|
||
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8571151 [details] [diff] [review]
Handle reconfiguring audio device if it went away while the stream was stopped
Approval Request Comment
[Feature/regressing bug #]: bug 698079/bug 1134078
[User impact if declined]: Crash (fatal assertion) when pausing or resuming playback after the audio device has changed
[Describe test coverage new/current, TreeHerder]: n/a
[Risks and why]: low risk
[String/UUID change made/needed]: none
Attachment #8571151 -
Flags: approval-mozilla-aurora?
Comment 8•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Updated•10 years ago
|
QA Whiteboard: [good first verify]
| Reporter | ||
Updated•10 years ago
|
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 9•10 years ago
|
||
No longer reproducible with latest Nightly from 2015-03-08 on Windows 8.1. Changed the status accordingly.
But if you plug and unplug audio jacks on YouTube without clicking "Pause", the sound doesn't work.
However, it was like that before.
Updated•10 years ago
|
Updated•10 years ago
|
Attachment #8571151 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•