Bug 1136107 - Handle reconfiguring audio device if it went away while the stream was stopped. r=padenot, a=lsblakk